variables.Variables.scala.error
Erreur de compilation :
Variables:14: error: value unary_! is not a member of Int
while (!dejaFait==nbPas){
       ^